Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <img src="https://upload.wikimedia.org/wikipedia/commons/a/ad/YouTube_loading_symbol_3_%28transparent%29.gif">
-<meta http-equiv="refresh" content="7; url='/articles'" />
+<meta http-equiv="refresh" content="7; url='/blogcog-ex/articles'" />
 <style>
   * {
     background-color: black
