--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <img src="https://upload.wikimedia.org/wikipedia/commons/a/ad/YouTube_loading_symbol_3_%28transparent%29.gif">
+Please wait...
 <meta http-equiv="refresh" content="7; url='/blogcog-ex/articles'" />
 <style>
   * {
     background-color: black
+    text-align: center
+    text-color: white
   }
 </style>
